
[package]
name = "mapack-macros"
version = "0.1.0"
description = "mapack macros"
publish = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true
license-file.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.72", features = ["full", "extra-traits"] }
quote = "1.0.36"
quote_into = "0.2.0"
proc-macro2 = "1.0.86"
